# rusty-dasher

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  Trunk.toml  index.html  package.json
.cargo/: config.toml
.github/workflows/: ci.yml  pages.yml
screenshots/desktop_baseline/: README.md  baseline_meta.json  compare_report.json  inputs.json  metrics_record.json  metrics_replay.json
screenshots/viewports/: 1080p_01_boot.review.json  1080p_02_menu.review.json  1080p_03_mode_select.review.json  1080p_04_playing.review.json  1080p_05_game_over.review.json  4k_01_boot.review.json  4k_02_menu.review.json  4k_03_mode_select.review.json  4k_04_playing.review.json  4k_05_game_over.review.json  laptop_720_01_boot.review.json  laptop_720_02_menu.review.json  laptop_720_03_mode_select.review.json  laptop_720_04_playing.review.json  laptop_720_05_game_over.review.json  laptop_hd_01_boot.review.json  laptop_hd_02_menu.review.json  laptop_hd_03_mode_select.review.json  laptop_hd_04_playing.review.json  laptop_hd_05_game_over.review.json  laptop_scaled_01_boot.review.json  laptop_scaled_02_menu.review.json  laptop_scaled_03_mode_select.review.json  laptop_scaled_04_playing.review.json  laptop_scaled_05_game_over.review.json  matrix_critique.md  matrix_results.json  phone_android_01_boot.review.json  phone_android_02_menu.review.json  phone_android_03_mode_select.review.json  phone_android_04_playing.review.json  phone_android_05_game_over.review.json  phone_android_landscape_01_boot.review.json  phone_android_landscape_02_menu.review.json  phone_android_landscape_03_mode_select.review.json  phone_android_landscape_04_playing.review.json  phone_android_landscape_05_game_over.review.json  phone_iphone_promax_01_boot.review.json  phone_iphone_promax_02_menu.review.json  phone_iphone_promax_03_mode_select.review.json  (+68 more)
scripts/: cdp.mjs  chrome_launch.mjs  clear-firefox-cache.sh  desktop_baseline.mjs  device_emulation.mjs  e2e_emulator_matrix.mjs  e2e_inputs.mjs  e2e_phone.mjs  qa_matrix.json  qa_success_criteria.json  record.mjs  viewport_shots.mjs  web-build.sh  web-serve-dist.sh  web-serve.sh
src/: audio_fx.rs  camera_fx.rs  components.rs  constants.rs  events.rs  game_assets.rs  main.rs  mesh_gfx.rs  particles.rs  player.rs  save.rs  screenshot_tour.rs  state.rs  stats.rs  touch_chrome.rs  touch_controls.rs  ui.rs  ui_scale.rs  util.rs  viewport.rs  web_pointer.rs  world.rs
web/: manifest.webmanifest  style.css  sw.js
