[package]
name = "star_collector"
version = "0.3.0"
edition = "2024"
description = "Star Collector — a polished Bevy 2D arcade game (native + WASM)"
license = "MIT"
repository = "https://github.com/IntRUSTing-Games/cyan-star-collector"
readme = "README.md"
keywords = ["bevy", "game", "wasm", "arcade", "2d"]
categories = ["games"]

[[bin]]
name = "star_collector"
path = "src/main.rs"

[dependencies]
bevy = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Storage",
  "console",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"

# Smaller / faster WASM builds
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"
