[package]
name = "rusty_dasher"
version = "0.3.0"
edition = "2024"
description = "Wanna try out a new 2010's vibe browser game? Check out RustyDasher (Bevy 0.19, native + WASM)."
license = "MIT"
repository = "https://github.com/IntRUSTing-Games/rusty-dasher"
readme = "README.md"
keywords = ["bevy", "game", "wasm", "arcade", "2d", "rust"]
categories = ["games"]

[[bin]]
name = "rusty_dasher"
path = "src/main.rs"

[dependencies]
bevy = "0.19.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
web-sys = { version = "0.3", features = [
  "Window",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "HtmlElement",
  "Storage",
  "console",
  "DomRect",
  "VisualViewport",
  "Location",
] }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

# Production ship profile (GitHub Pages / `trunk build --release`).
# Keep codegen-units=1 + thin LTO — smaller/faster WASM for players.
[profile.release]
codegen-units = 1
lto = "thin"

# Production-oriented WASM size profile (optional explicit use).
[profile.wasm-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

# Local-only WASM iteration profile (scripts/web-build.sh default).
# CI does NOT use this — still `trunk build --release` on Pages.
# Faster link + more parallel codegen; still opt-level 2 so play is fine.
[profile.wasm-fast]
inherits = "release"
lto = false
codegen-units = 16
opt-level = 2
incremental = true
strip = "none"
debug = false
